# livekit-screen-control

./: .gitignore  .gitmodules  .prettierignore  LICENSE  livekit-screen-control.code-workspace  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
agent/: Cargo.toml
agent-electron/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vite.config.ts
agent-electron/electron/: electron-env.d.ts  main.ts  preload.ts
agent-electron/src/: App.tsx  Canvas.tsx  codec.tsx  index.css  main.tsx
agent/src/: main.rs
example/: App.tsx  index.css  index.html  main.tsx
flutter/: README.md  package.json  pubspec.yaml
flutter/lib/: main.dart
flutter/linux/: CMakeLists.txt  my_application.cc
flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/test/: widget_test.dart
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
